# http_server_maxwell

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  maxwell.webm
